# schematerial

./: .gitignore  README.md  pyproject.toml  schematerial_technical_plan.md
src/schematerial/: cli.py  pipeline.py
src/schematerial/models/: __init__.py  alignment.py  annotation.py  crosswalk.py  ontology.py  schema.py  transform.py
src/schematerial/parsers/: __init__.py  _yaml_base.py  base.py  emmet.py  nomad.py  optimade.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: cif_entry.json  cif_schema.yaml  emmet_entry.json  emmet_schema.yaml  nomad_emmet_gt.yaml  nomad_entry.json  nomad_optimade_gt.yaml  nomad_schema.yaml  optimade_entry.json  optimade_schema.yaml
tests/unit/: test_models.py  test_parsers.py
