[project]
name = "schematerial"
version = "0.0.0"
description = "Semantic crosswalk compiler for materials-science data models"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
schematerial = "schematerial.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schematerial"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
